--- a/html/test-file-1.html
+++ b/html/test-file-1.html
@@ -28,8 +28,8 @@
         <ul class="navbar-nav bg-gradient-primary sidebar sidebar-dark accordion" id="accordionSidebar">
 
             <a class="sidebar-brand d-flex align-items-center justify-content-center" href="index.html">
-                <div class="sidebar-brand-icon rotate-n-15">
-                    <i class="fas fa-laugh-wink"></i>
+                <div class="sidebar-brand-icon d-flex align-items-center justify-content-center">
+                    <img src="logo.png" alt="SNotePad Logo">
                 </div>
                 <div class="sidebar-brand-text mx-3">SNotePad</div>
             </a>
@@ -41,6 +41,7 @@
                     <i class="fas fa-fw fa-tachometer-alt"></i>
                     <span>Settings</span></a>
             </li>
+
 
             <hr class="sidebar-divider">
 
@@ -255,7 +256,7 @@ End of test content.
 
     <script src="vendor/jquery-easing/jquery.easing.min.js"></script>
 
-    <script src="js/sb-admin-2.min.js"></script>
+    <script src="js/main.min.js"></script>
 
     <script src="vendor/easymde/easymde.min.js"></script>
     <script>
