--- a/html/test-file-1.html
+++ b/html/test-file-1.html
@@ -16,7 +16,7 @@
         href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i"
         rel="stylesheet">
 
-    <link href="css/sb-admin-2.min.css" rel="stylesheet">
+    <link href="css/styles.min.css" rel="stylesheet">
     <link rel="stylesheet" href="vendor/easymde/easymde.min.css">
 
 </head>
@@ -256,7 +256,7 @@ End of test content.
 
     <script src="vendor/jquery-easing/jquery.easing.min.js"></script>
 
-    <script src="js/main.min.js"></script>
+    <script src="js/scripts.min.js"></script>
 
     <script src="vendor/easymde/easymde.min.js"></script>
     <script>
