Implemented mockup UI

--- a/html/index.html
+++ b/html/index.html
@@ -65,7 +65,7 @@
             <div id="content">
 
                  <div class="container-fluid">
-                     <div class="row">
+                     <div id="page" class="row">
                      </div>
                  </div>
             </div>
@@ -83,9 +83,9 @@
 
     <script src="vendor/jquery-easing/jquery.easing.min.js"></script>
 
-    <script src="js/scripts.min.js"></script>
-
     <script src="vendor/easymde/easymde.min.js"></script>
+
+    <script src="js/build/scripts.min.js"></script>
 </body>
 
 </html>
