--- a/html/index.html
+++ b/html/index.html
@@ -57,7 +57,7 @@
         </ul>
         <div id="content-wrapper" class="d-flex flex-column">
 
-             <nav class="navbar navbar-expand navbar-light bg-white topbar mb-4 static-top shadow">
+             <nav class="navbar navbar-expand topbar mb-4 static-top shadow">
                 <button id="sidebarToggleTop" class="btn btn-link d-md-none rounded-circle mr-3">
                     <i class="fa fa-bars"></i>
                 </button>
