Implemeneted toast notifications in app

--- a/html/index.html
+++ b/html/index.html
@@ -77,6 +77,8 @@
     <div class="modal fade" id="logoutModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
         aria-hidden="true">
     </div>
+    <div id="toastContainer" aria-live="polite" aria-atomic="true" class="position-fixed">
+    </div>
 
     <script src="vendor/jquery/jquery.min.js"></script>
     <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
@@ -84,6 +86,8 @@
     <script src="vendor/jquery-easing/jquery.easing.min.js"></script>
 
     <script src="vendor/easymde/easymde.min.js"></script>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/hammer.js/2.0.8/hammer.min.js"></script>
 
     <script src="js/build/scripts.min.js"></script>
 </body>
