Implemented async backend api

--- a/html/index.html
+++ b/html/index.html
@@ -22,7 +22,11 @@
 </head>
 
 <body id="page-top">
-
+    <div id="loading-overlay">
+        <div class="spinner-border text-primary" role="status">
+            <span id="loading-prompt" class="visually-hidden"></span>
+        </div>
+    </div>
     <div id="wrapper">
 
         <ul class="navbar-nav bg-gradient-primary sidebar sidebar-dark accordion" id="accordionSidebar">
