Made gulpfile to release web assets to the assets folder and added those assets to git for easier compilation by others

--- a/app/src/main/assets/index.html
+++ b/app/src/main/assets/index.html
@@ -1,127 +1,83 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SNotePad Interface</title>
-    <style>
-        body {
-            font-family: sans-serif;
-            margin: 15px;
-            background-color: #f4f4f4;
-            color: #333;
-        }
-        .container {
-            background-color: #fff;
-            padding: 20px;
-            border-radius: 8px;
-            box-shadow: 0 2px 5px rgba(0,0,0,0.1);
-            margin-bottom: 20px;
-        }
-        h2 {
-            color: #555;
-            border-bottom: 1px solid #eee;
-            padding-bottom: 5px;
-            margin-top: 0;
-        }
-        button {
-            padding: 10px 15px;
-            font-size: 1em;
-            cursor: pointer;
-            background-color: #007bff;
-            color: white;
-            border: none;
-            border-radius: 5px;
-            margin: 5px 0;
-            transition: background-color 0.2s ease;
-        }
-        button:hover {
-            background-color: #0056b3;
-        }
-        button:active {
-             background-color: #004085;
-        }
-        input[type="text"], textarea {
-            width: calc(100% - 22px); /* Account for padding and border */
-            padding: 10px;
-            margin-bottom: 10px;
-            border: 1px solid #ccc;
-            border-radius: 4px;
-            font-size: 1em;
-        }
-        textarea {
-            height: 100px;
-            resize: vertical;
-        }
-        ul {
-            list-style: none;
-            padding: 0;
-        }
-        li {
-            background-color: #e9ecef;
-            margin-bottom: 8px;
-            padding: 10px;
-            border-radius: 4px;
-            cursor: pointer;
-            transition: background-color 0.2s ease;
-        }
-        li:hover {
-            background-color: #ced4da;
-        }
-        .file-content {
-            background-color: #f8f9fa;
-            border: 1px solid #dee2e6;
-            padding: 10px;
-            margin-top: 5px;
-            border-radius: 4px;
-            white-space: pre-wrap; /* Preserve whitespace and newlines */
-            word-wrap: break-word; /* Break long words */
-            font-family: monospace;
-            max-height: 200px;
-            overflow-y: auto; /* Add scroll if content is too long */
-        }
-        .error-message {
-            color: #dc3545;
-            background-color: #f8d7da;
-            border: 1px solid #f5c6cb;
-            padding: 10px;
-            border-radius: 4px;
-            margin-top: 10px;
-        }
-        .hidden {
-            display: none;
-        }
-    </style>
+
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="description" content="">
+    <meta name="author" content="">
+
+    <title>S Notepad</title>
+
+    <link href="styles.min.css" rel="stylesheet">
 </head>
-<body>
 
-    <h1>SNotePad</h1>
+<body id="page-top">
+    <div id="loading-overlay">
+        <div class="spinner-border text-primary" role="status">
+            <span id="loading-prompt" class="visually-hidden"></span>
+        </div>
+    </div>
+    <div id="wrapper">
 
-    <div id="error-display" class="error-message hidden"></div>
+        <ul class="navbar-nav bg-gradient-primary sidebar sidebar-dark accordion" id="accordionSidebar">
 
-    <div class="container">
-        <h2>File Explorer</h2>
-        <button id="select-folder-btn">Select Folder</button>
-        <p>Selected Folder Files:</p>
-        <ul id="file-list">
-            </ul>
+            <a class="sidebar-brand d-flex align-items-center justify-content-center" href="index.html">
+                <div class="sidebar-brand-icon d-flex align-items-center justify-content-center">
+                    <img src="logo.png" alt="SNotePad Logo">
+                </div>
+                <div class="sidebar-brand-text mx-3">SNotePad</div>
+            </a>
+
+            <hr class="sidebar-divider my-0">
+
+            <li class="nav-item active">
+                <a class="nav-link" href="#" id="sidebar-item-settings">
+                    <i class="fas fa-fw fa-tachometer-alt"></i>
+                    <span>Settings</span>
+                </a>
+            </li>
+
+
+            <hr class="sidebar-divider">
+
+            <div class="sidebar-heading" id="sidebarFoldersBegin">
+                Folders
+            </div>
+            <hr class="sidebar-divider d-none d-md-block">
+
+            <div class="text-center d-none d-md-inline">
+                <button class="rounded-circle border-0" id="sidebarToggle"></button>
+            </div>
+        </ul>
+        <div id="content-wrapper" class="d-flex flex-column">
+
+             <nav class="navbar navbar-expand topbar mb-4 static-top shadow">
+                <button id="sidebarToggleTop" class="btn btn-link d-md-none rounded-circle mr-3">
+                    <i class="fa fa-bars"></i>
+                </button>
+            </nav>
+            <div id="content">
+
+                 <div class="container-fluid">
+                     <div id="page" class="row">
+                     </div>
+                 </div>
+            </div>
+        </div>
+    <a class="scroll-to-top rounded" href="#page-top">
+        <i class="fas fa-angle-up"></i>
+    </a>
+
+    <div class="modal fade" id="logoutModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+        aria-hidden="true">
+    </div>
+    <div id="toastContainer" aria-live="polite" aria-atomic="true" class="position-fixed">
     </div>
 
-    <div class="container">
-        <h2>Save Note to App Storage</h2>
-        <input type="text" id="filename-input" placeholder="Enter filename (e.g., note.txt)">
-        <textarea id="content-textarea" placeholder="Enter file content here..."></textarea>
-        <button id="save-file-btn">Save File</button>
-    </div>
-
-    <div class="container">
-        <h2>Preferences (Key-Value Store)</h2>
-        <input type="text" id="prefs-key-input" placeholder="Enter preference key">
-        <input type="text" id="prefs-value-input" placeholder="Enter value to save/load">
-        <button id="save-prefs-btn">Save Preference</button>
-        <button id="load-prefs-btn">Load Preference</button>
-    </div>
-
-    <script src="script.js"></script>
+    <script src="scripts.min.js"></script>
 </body>
+
 </html>
