--- a/html/index.html
+++ b/html/index.html
@@ -11,7 +11,7 @@
 
     <title>S Notepad</title>
 
-    <link href="css/styles.min.css" rel="stylesheet">
+    <link href="styles.min.css" rel="stylesheet">
 </head>
 
 <body id="page-top">
@@ -77,7 +77,7 @@
     <div id="toastContainer" aria-live="polite" aria-atomic="true" class="position-fixed">
     </div>
 
-    <script src="js/build/scripts.min.js"></script>
+    <script src="scripts.min.js"></script>
 </body>
 
 </html>
