Enabled autocapitalize="words" for filename editor Editor updates filename field when save is done in case unsafecharacters have been removed by the java backend Implemented editor rename feature Fixed the issue editor filename not getting updated with the actual saved name after save Implemented file delete confirmation bug Implemented folder release confirmation bug (actual folder release in java is not implemented yet)

--- a/app/src/main/assets/index.html
+++ b/app/src/main/assets/index.html
@@ -71,8 +71,20 @@
         <i class="fas fa-angle-up"></i>
     </a>
 
-    <div class="modal fade" id="logoutModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
-        aria-hidden="true">
+    <div class="modal fade" id="confirmModal" tabindex="-1" aria-labelledby="confirmModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="confirmModalLabel">Label Here</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body" id="confirmModalMessage">Message here</div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+                    <button type="button" class="btn btn-danger" id="confirmBtn">Yes</button>
+                </div>
+            </div>
+        </div>
     </div>
     <div id="toastContainer" aria-live="polite" aria-atomic="true" class="position-fixed">
     </div>
