Made topbar slimmer and more efficient in size

--- a/app/src/main/assets/index.html
+++ b/app/src/main/assets/index.html
@@ -54,14 +54,14 @@
         </ul>
         <div id="content-wrapper" class="d-flex flex-column">
 
-             <nav class="navbar navbar-expand topbar mb-4 static-top shadow">
+             <nav class="navbar navbar-expand topbar static-top shadow">
                 <button id="sidebarToggleTop" class="btn btn-link d-md-none rounded-circle mr-3">
                     <i class="fa fa-bars"></i>
                 </button>
             </nav>
             <div id="content">
 
-                 <div class="container-fluid">
+                 <div class="container-fluid pt-4">
                      <div id="page" class="row">
                      </div>
                  </div>
