--- a/app/src/main/assets/index.html
+++ b/app/src/main/assets/index.html
@@ -58,6 +58,9 @@
                 <button id="sidebarToggleTop" class="btn btn-link d-md-none rounded-circle mr-3">
                     <i class="fa fa-bars"></i>
                 </button>
+                <button id="btnBack" class="btn btn-link rounded-circle mr-3 d-none">
+                    <i class="fa fa-arrow-left"></i>
+                </button>
             </nav>
             <div id="content">
 
@@ -80,7 +83,7 @@
                 </div>
                 <div class="modal-body" id="confirmModalMessage">Message here</div>
                 <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+                    <button type="button" class="btn btn-secondary" id="cancelBtn" data-bs-dismiss="modal">Cancel</button>
                     <button type="button" class="btn btn-danger" id="confirmBtn">Yes</button>
                 </div>
             </div>
