--- a/html/index.html
+++ b/html/index.html
@@ -15,10 +15,11 @@
 </head>
 
 <body id="page-top">
-    <div id="loading-overlay">
+    <div id="loading-overlay" class="d-flex flex-column align-items-center">
         <div class="spinner-border text-primary" role="status">
-            <span id="loading-prompt" class="visually-hidden"></span>
+            <span class="visually-hidden"></span>
         </div>
+        <span id="loading-prompt" class="mt-2 text-uppercase"></span>
     </div>
     <div id="wrapper">
 
