--- a/html/index.html
+++ b/html/index.html
@@ -41,13 +41,26 @@
                 </a>
             </li>
 
-
             <hr class="sidebar-divider">
 
             <div class="sidebar-heading" id="sidebarFoldersBegin">
                 Folders
             </div>
             <hr class="sidebar-divider d-none d-md-block">
+
+            <li class="nav-item active">
+                <a class="nav-link sidebar-item-simple-page" href="#" id="help">
+                    <i class="fas fa-fw fa-circle-question"></i>
+                    <span>Help</span>
+                </a>
+            </li>
+
+            <li class="nav-item active">
+                <a class="nav-link sidebar-item-simple-page" href="#" id="about">
+                    <i class="fas fa-fw fa-circle-info"></i>
+                    <span>About</span>
+                </a>
+            </li>
 
             <div class="text-center d-none d-md-inline">
                 <button class="rounded-circle border-0" id="sidebarToggle"></button>
