--- a/html/index.html
+++ b/html/index.html
@@ -80,7 +80,14 @@
 
                  <div class="container-fluid pt-4">
                      <div id="page" class="row">
-                     </div>
+                        <div class="col d-flex flex-column justify-content-center align-items-center text-center h-100">
+                            <h1>Welcome to SNotePad!</h1>
+                            <p class="lead mb-4">Start by adding a folder using the button below:</p>
+                            <button type="button" class="btn btn-primary btn-lg" id="btn-welcome-add-folder">
+                                <i class="fas fa-plus me-2"></i>Add Folder
+                            </button>
+                        </div>
+                    </div>
                  </div>
             </div>
         </div>
