--- a/app/src/main/assets/index.html
+++ b/app/src/main/assets/index.html
@@ -34,7 +34,7 @@
 
             <hr class="sidebar-divider my-0">
 
-            <li class="nav-item active">
+            <li class="nav-item">
                 <a class="nav-link" href="#" id="sidebar-item-settings">
                     <i class="fas fa-fw fa-tachometer-alt"></i>
                     <span>Settings</span>
@@ -48,14 +48,14 @@
             </div>
             <hr class="sidebar-divider d-none d-md-block">
 
-            <li class="nav-item active">
+            <li class="nav-item">
                 <a class="nav-link sidebar-item-simple-page" href="#" id="help">
                     <i class="fas fa-fw fa-circle-question"></i>
                     <span>Help</span>
                 </a>
             </li>
 
-            <li class="nav-item active">
+            <li class="nav-item">
                 <a class="nav-link sidebar-item-simple-page" href="#" id="about">
                     <i class="fas fa-fw fa-circle-info"></i>
                     <span>About</span>
